@@ -23,10 +23,11 @@
 
 package org.fao.oaipmh.responses;
 
-import java.util.Random;
+import java.math.BigInteger;
+import java.security.SecureRandom;
 
+import org.fao.geonet.domain.ISODate;
 import org.fao.oaipmh.util.SearchResult;
-import org.fao.oaipmh.util.ISODate;
 import org.fao.oaipmh.OaiPmh;
 import org.fao.oaipmh.exceptions.BadResumptionTokenException;
 import org.fao.oaipmh.requests.TokenListRequest;
@@ -156,8 +157,7 @@ public class GeonetworkResumptionToken extends ResumptionToken
 	}
 	
 	public void setupToken(int newpos) {
-
-		if (newpos < res.ids.size()) // update token so that it refers to the next chunk
+		if (newpos < res.getIds().size()) // update token so that it refers to the next chunk
 			setPos(newpos);
 		else 
 		{
@@ -214,8 +214,8 @@ public class GeonetworkResumptionToken extends ResumptionToken
 		String curs  = rt.getAttributeValue("cursor");
 
 		setExpirDate((expDt  == null) ? null : new ISODate(expDt));
-		listSize  = (listSz == null) ? null : new Integer(listSz);
-		cursor    = (curs   == null) ? null : new Integer(curs);
+		listSize  = (listSz == null) ? null : Integer.valueOf(listSz);
+		cursor    = (curs   == null) ? null : Integer.valueOf(curs);
 	}
 
 	private void parseToken(String strToken) throws BadResumptionTokenException {
@@ -233,11 +233,11 @@ public class GeonetworkResumptionToken extends ResumptionToken
 
 		pos = Integer.parseInt( temp[5] );
 	}
+	  private SecureRandom random = new SecureRandom();
 
-	private static String generateRandomString() {
-		Random r = new Random();
-		return Long.toString(Math.abs(r.nextLong()), 36);
-	}
+    public String generateRandomString() {
+        return new BigInteger(130, random).toString(36);
+    }
 
 }
 
